Hoàn thiện trang người dùng và giỏ hàng, hoàn thiện một số thao tác cho người dùng

--- a/ShopBack/ShopBack.Web/AppSettings.config
+++ b/ShopBack/ShopBack.Web/AppSettings.config
@@ -6,6 +6,12 @@
 	<add key="PageSize" value="20"/>
 	<add key="MaxPage" value="5"/>
 
-	
+	<add key="SMTPHost" value="smtp.gmail.com"/>
+	<add key="SMTPPort" value="587"/>
+	<add key="FromEmailAddress" value="hoanganh180418@gmail.com"/>
+	<add key="FromEmailPassword" value="Anhtdh98"/>
+	<add key="FromName" value="ShopBackEmail"/>
+	<add key="AdminEmail" value="anh.trinhduchoang@gmail.com"/>
+	<add key="CurrentLink" value="http://localhost:44390/"/>
 	<add key="EnableBundles" value="false"/>
 </appSettings>
